--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aszuneai",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -9,7 +9,9 @@
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit",
     "security": "npm audit --audit-level=high",
     "format:md": "prettier --write '**/*.md'",
-    "format": "prettier --write 'src/**/*.js' '__tests__/**/*.js'"
+    "format": "prettier --write 'src/**/*.js' '__tests__/**/*.js'",
+    "lint": "eslint src __tests__",
+    "lint:fix": "eslint src __tests__ --fix"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "codecov": "^3.8.2",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "nodemon": "^3.0.1",
