--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aszuneai",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -39,7 +39,7 @@
     "raspberry-pi"
   ],
   "author": "Chris Haycock <chrishaycock@users.noreply.github.com>",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "description": "A Discord bot specialized in gaming lore, game logic, guides, and advice using the Perplexity API",
   "repository": {
     "type": "git",
